--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,25 @@
-spring.application.name=accounts-demo
+spring:
+
+  h2:
+    console:
+      enabled: true
+
+  application:
+    name: accounts-demo
+
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: rg
+    password:
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+
+
+
+server:
+  port: 9191
